<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Decimal_Binary_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_to_binary_text"
        app:layout_constraintBottom_toBottomOf="@+id/Factorial_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Factorial_Button" />

    <Button
        android:id="@+id/GCD_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Gcd_Text"
        app:layout_constraintEnd_toStartOf="@+id/LCM_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/LCM_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LCM_Text"
        app:layout_constraintBottom_toBottomOf="@+id/GCD_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/GCD_Button" />

    <Button
        android:id="@+id/Set_Math_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/setMath_Text"
        app:layout_constraintEnd_toStartOf="@+id/Modulus_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GCD_Button" />

    <Button
        android:id="@+id/Modulus_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modularArithmetic_Text"
        app:layout_constraintBottom_toBottomOf="@+id/Set_Math_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Set_Math_Button" />

    <Button
        android:id="@+id/Prime_Count_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/primeCount_Text"
        app:layout_constraintEnd_toStartOf="@+id/Decimal_Frac_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Set_Math_Button" />

    <Button
        android:id="@+id/Decimal_Frac_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decimal_to_fraction_text"
        app:layout_constraintBottom_toBottomOf="@+id/Prime_Count_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Prime_Count_Button" />

    <Button
        android:id="@+id/Factorial_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/factorials_text"
        app:layout_constraintEnd_toStartOf="@+id/Decimal_Binary_Button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Prime_Count_Button" />

    <Button
        android:id="@+id/Decimal_Hexadecimal_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/decimal_to_hexadecimal_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Decimal_Binary_Button" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/MAIN_ACTIVITY_Welcome_Message"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/MAIN_ACTIVITY_PickAFunctions_String"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/Dictionary_Button"
        android:layout_width="118dp"
        android:layout_height="42dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="147dp"
        android:text="@string/dictionary_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

</androidx.constraintlayout.widget.ConstraintLayout>